[package]
name = "lsp-text-document"
version = "0.1.0"
authors = ["IWANABETHATGUY <974153916@qq.com>"]
edition = "2018"
license = "MIT"
description = "textDocument manager rust implementation"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.84.0"
